# AA_DistributedSystems_Lab

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
U1-Sockets/: A_server_getTime.py  B1_server_getTime.py  B_server_getTime.py  C_client.py  C_server_returnUpperChars.py  D_server_game.py  README.md
U11-Hbase/: steps.md
U2-RPC/: A_client.py  A_server.py  B_restful-app.py  C_restful-Swagger.py  ETCD.md  README.md  UV Basics.md  app.py  openapi.yaml
U2-RPC/withCorba/: README.md
U3-Clocks/: A_ConfiguringLocalNTPServer.md  README.md
U3-Clocks/NTP-demo/: docker-compose.yml  readme.md
U4-IndirectCommunication/: README.md  broker.py  client_pub.py  client_sub.py
U4-IndirectCommunication/onApacheKafka/: README.md  docker-compose.yml  node_x.py  run.py
U4-IndirectCommunication/onHIVEMQ/: README.md  publish.py  subscriber.py
U5-Coordination/MaekawaMutexAlgorithm/: README.md  maekawaMutex.py  main.py  message.py  node.py  nodeSend.py  nodeServer.py  utils.py
U5-Coordination/SubastasDeContainers/: client.py  server.py
U5-Coordination/WithETCD/: client.py  docker-compose.yml
U5-Coordination/WithOutCoordination/: client.py  server.py  shared_resource.txt
U5-MaekawaMutexAlgorithm/: README.md  config.py  maekawaMutex.py  main.py  node.py  nodeSend.py  nodeServer.py  utils.py
U6-LeaderElection/WithZookeeper/: README.md  basics.py  docker-compose.yml  election_test.py  (+2 more)
U9-Spark/: 0_Hadoop_steps.md  1_Spark_steps.md  SparkExamples.ipynb  Spark_DFs.ipynb  Spark_Ingest.ipynb  pageRank_data.txt  spark_activity.ipynb  steps-hadoop.md  steps-spark.md
(+9 files in other folders)
