[project]
name = "aa-distributedsystems-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.11.1",
    "etcd3>=0.12.0",
    "ipykernel>=7.1.0",
    "kazoo>=2.10.0",
    "paho-mqtt>=2.1.0",
    "protobuf>=3.20.0,<4.0.0",
    "pyspark>=4.0.1",
]
